turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:4: error: not found: value ligne2Maison
  ligne2Maison()
  ^